--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -51,8 +51,8 @@
                 <!-- <h1>Reparacion de Trailers</h1> -->
                 <div class="imagenes">
                     <img src="../img/logosinfondo.png" alt="logo">
-                    <img src="../Img/nombresinfondo.png" alt="pie_logo">
-                    <img src="../Img/logomecanico.png" alt="mecanico">
+                    <img src="../img/nombresinfondo.png" alt="pie_logo">
+                    <img src="../img/logomecanico.png" alt="mecanico">
                 </div>
             </div>
             <div class="contenedor2">
