--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./Img/trailer.jpg" class="d-block w-100" alt="trailer">
+                        <img src="./img/trailer.jpg" class="d-block w-100" alt="trailer">
                     <div class="carousel-caption d-none d-md-block">
                         <h1>WS Reparación de Trailers</h1>
                         <div class="contenedor_boton">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./Img/trailer1.jpg" class="d-block w-100" alt="trailer1">
+                    <img src="./img/trailer1.jpg" class="d-block w-100" alt="trailer1">
                 <div class="carousel-caption d-none d-md-block">
                     <h1>WS Reparación de Trailers</h1>
                     <div class="contenedor_boton">
@@ -68,7 +68,7 @@
                 </div>
             </div>
                 <div class="carousel-item">
-                    <img src="./Img/trailer2.jpg" class="d-block w-100" alt="trailer2">
+                    <img src="./img/trailer2.jpg" class="d-block w-100" alt="trailer2">
                     <div class="carousel-caption d-none d-md-block">
                         <h1>WS Reparación de Trailers</h1>
                         <div class="contenedor_boton">
