--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <!-- tags SEO -->
+    <title>W&S - Reparación de Trailers</title>
+    <meta name="description" content="Taller de Reparación de Trailers y sus sistemas de refrigeración. ¡Contactanos y te daremos una cita para armar tu Presupuesto!">
+    <meta name="keywords" content="taller, reparacion, trailer, camion, refrigeracion">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- CSS -->
@@ -46,7 +49,7 @@
     <main>  
         <section class="section0">
             <div class="titulo_index">
-                <h1>W&S TRAILER REPAIR</h1>
+                <h1>REPARACIóN DE TRAILERS</h1>
             </div>
         </section>     
         <section id="section1">
